2009-04-24  Marek Habersack  <mhabersack@novell.com>

	* TemplateParser.cs: PageParserFilter.Initialize now takes just
	one parameter.
	AddImport ignores null/empty namespaces. Fixes bug #498118

	* PageParserFilter.cs: a few alignments for .NET compatibility in
	the default behavior.

2009-04-22  Marek Habersack  <mhabersack@novell.com>

	* TemplateParser.cs: create the imports ArrayList before
	attempting to use it. Fixes bug #497174

2009-04-21  Marek Habersack  <mhabersack@novell.com>

	* Page.cs: added support for OutputCacheParameters.NoStore to
	InitOutputCache.

	* SimpleWebHandlerParser.cs: retrieve CompilationSection from the
	appropriate web.config file.

	* BaseParser.cs: moved the internal property VirtualPath from
	TemplateParser to here and added an internal method
	GetConfigSection to retrieve sections from the correct web.config
	file on 2.0 applications. Fixes bug #494245

	* PageParser.cs: use the new GetConfigSection method to retrieve
	ClientTargetSection.

	* TemplateParser.cs: moved the VirtualPath property to
	BaseParser.
	PagesConfig now uses the new GetConfigSection method. Fixes bug
	#494245
	Added support for the SqlDependency, NoStore and CacheProfile
	attributes of the OutputCache directive. Fixes bug #496951

2009-04-15  Marek Habersack  <mhabersack@novell.com>

	* TemplateParser.cs: use generic lists for import, namespace and
	interface caches. If a namespace is added (e.g. by parsing the
	Import directive), find the assembly in which namespace is
	defined.

2009-04-07  Marek Habersack  <mhabersack@novell.com>

	* Control.cs: ApplyTheme - make sure Page is not null before using
	it. Fixes bug #492666

2009-03-31  Marek Habersack  <mhabersack@novell.com>

	* Page.cs: SavePageViewState saves the list of controls which
	require post back regardless of whether view state is disabled or
	not. Fixes bug #490753

	* ApplicationFileParser.cs, MasterPageParser.cs, PageParser.cs,